# patent_embedder

./: .gitignore  README.md  docembedder.py  example.py  example_local.py  pyproject.toml  requirements.txt  setup.py  test_upload.py  train.py
docembedder/: docembedder.py  train.py
examples/: example_with_download.py
llm4bi_embedders/: docembedder.py  train.py
llm4bi_embedders/src/: dataset.py  lightningMods.py  loss.py  model.py
llm4bi_embedders/src/utils/: general.py
src/: dataset.py  lightningMods.py  loss.py  model.py  train.py
src/utils/: general.py
